# research

./: ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
docs/: hi-agent-w35-acceptance-audit-2026-05-05.md  hi-agent-w35-corrective-acceptance-and-w36-supplement-directive-2026-05-07.md  hi-agent-w35-corrective-acceptance-audit-2026-05-07.md  hi-agent-w35-corrective-directive-2026-05-05.md  hi-agent-w36-supplement-acceptance-and-s1-amendment-2026-05-07.md  hi-agent-wave34-engineering-expectations-2026-05-04.md  hi-agent-wave35-acceptance-and-wave36-expectations-2026-05-05.md  hi-agent-wave36-engineering-expectations-2026-05-05.md
docs/ria/: ria-architecture-v1.md  ria-architecture-v2.md  ria-domain-model-v1.md  ria-engineering-plan-r-w1-2026-05-05.md  ria-platform-contract-mapping-v1.md  ria-quality-requirements-v1.md
docs/ria/red-status/: .gitkeep
docs/superpowers/specs/: 2026-04-15-research-intelligence-app-design.md
scripts/: check_doc_truth.py  check_naming_hygiene.py  check_provenance_ladder.py  check_route_presence.py
skills/: .gitkeep  RESEARCH-SKILLS-FRAMEWORK.md
skills/experiments/: SKILL.md
skills/literature-review/: SKILL.md  SKILL_DETAILED.md
skills/literature-review/templates/: search-strategy-template.md
skills/paper-reading/: SKILL.md
skills/paper-writing/: SKILL.md
tests/: _blocked_by_platform.yaml
tests/_stubs/: README.md
tests/integration/: conftest.py
