[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ria"
version = "0.1.0"
description = "Research Intelligence Application — RIA layer above hi-agent platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "RIA team" }]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",     # parsing only; not used in ria/domain/
]

[project.optional-dependencies]
http = [
    "fastapi>=0.115",
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
]
mcp = [
    "mcp>=1.0",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]
lint = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
ria = "ria.api.cli.__main__:main"

[tool.setuptools.packages.find]
include = ["ria*"]
exclude = ["tests*", "docs*", "skills*", "tools*", "scripts*", "deploy*"]

[tool.ruff]
target-version = "py312"
line-length = 110
src = ["ria"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "integration: real RIA wiring against real local agent-server subprocess (per ria-architecture-v2.md §0.4)",
    "conformance: contract conformance against agent_server v1",
    "soak: long-running soak tests (skipped in default-offline)",
]
